[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["kodyt"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
python-dotenv = "^0.19.2"
Command = "^0.1.0"
requests = "^2.27.1"
MechanicalSoup = "^1.1.0"
beautifulsoup4 = "^4.10.0"
urllib3 = "^1.26.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"